--- a/css/_flaticon.scss
+++ b/css/_flaticon.scss
@@ -1,6 +1,6 @@
     /*
     Flaticon icon font: Flaticon
-    Creation date: 05/11/2019 12:16
+    Creation date: 21/11/2019 07:26
     */
 
     @font-face {
@@ -37,32 +37,44 @@
   font-smoothing: antialiased;
     }
 
-    .flaticon-linkedin:before { content: "\f100"; }
-.flaticon-facebook:before { content: "\f101"; }
-.flaticon-whatsapp:before { content: "\f102"; }
-.flaticon-github:before { content: "\f103"; }
-.flaticon-twitter:before { content: "\f104"; }
-.flaticon-gmail:before { content: "\f105"; }
-.flaticon-speech-bubble:before { content: "\f106"; }
-.flaticon-google-drive-logo:before { content: "\f107"; }
-.flaticon-upload-to-cloud-button:before { content: "\f108"; }
-.flaticon-cloud-storage-download:before { content: "\f109"; }
-.flaticon-linkedin-1:before { content: "\f10a"; }
-.flaticon-whatsapp-1:before { content: "\f10b"; }
-.flaticon-menu:before { content: "\f10c"; }
-.flaticon-menu-button:before { content: "\f10d"; }
+    .flaticon-curly-brackets:before { content: "\f100"; }
+.flaticon-linkedin:before { content: "\f101"; }
+.flaticon-twitter:before { content: "\f102"; }
+.flaticon-medium:before { content: "\f103"; }
+.flaticon-facebook:before { content: "\f104"; }
+.flaticon-instagram:before { content: "\f105"; }
+.flaticon-whatsapp:before { content: "\f106"; }
+.flaticon-youtube:before { content: "\f107"; }
+.flaticon-github:before { content: "\f108"; }
+.flaticon-telegram:before { content: "\f109"; }
+.flaticon-behance:before { content: "\f10a"; }
+.flaticon-share:before { content: "\f10b"; }
+.flaticon-gmail:before { content: "\f10c"; }
+.flaticon-google-browser:before { content: "\f10d"; }
+.flaticon-maps-and-flags:before { content: "\f10e"; }
+.flaticon-email:before { content: "\f10f"; }
+.flaticon-search:before { content: "\f110"; }
+.flaticon-cell-phone:before { content: "\f111"; }
+.flaticon-backup:before { content: "\f112"; }
+.flaticon-photo:before { content: "\f113"; }
     
-    $font-Flaticon-linkedin: "\f100";
-    $font-Flaticon-facebook: "\f101";
-    $font-Flaticon-whatsapp: "\f102";
-    $font-Flaticon-github: "\f103";
-    $font-Flaticon-twitter: "\f104";
-    $font-Flaticon-gmail: "\f105";
-    $font-Flaticon-speech-bubble: "\f106";
-    $font-Flaticon-google-drive-logo: "\f107";
-    $font-Flaticon-upload-to-cloud-button: "\f108";
-    $font-Flaticon-cloud-storage-download: "\f109";
-    $font-Flaticon-linkedin-1: "\f10a";
-    $font-Flaticon-whatsapp-1: "\f10b";
-    $font-Flaticon-menu: "\f10c";
-    $font-Flaticon-menu-button: "\f10d";
+    $font-Flaticon-curly-brackets: "\f100";
+    $font-Flaticon-linkedin: "\f101";
+    $font-Flaticon-twitter: "\f102";
+    $font-Flaticon-medium: "\f103";
+    $font-Flaticon-facebook: "\f104";
+    $font-Flaticon-instagram: "\f105";
+    $font-Flaticon-whatsapp: "\f106";
+    $font-Flaticon-youtube: "\f107";
+    $font-Flaticon-github: "\f108";
+    $font-Flaticon-telegram: "\f109";
+    $font-Flaticon-behance: "\f10a";
+    $font-Flaticon-share: "\f10b";
+    $font-Flaticon-gmail: "\f10c";
+    $font-Flaticon-google-browser: "\f10d";
+    $font-Flaticon-maps-and-flags: "\f10e";
+    $font-Flaticon-email: "\f10f";
+    $font-Flaticon-search: "\f110";
+    $font-Flaticon-cell-phone: "\f111";
+    $font-Flaticon-backup: "\f112";
+    $font-Flaticon-photo: "\f113";
