--- a/css/flaticon.css
+++ b/css/flaticon.css
@@ -1,6 +1,6 @@
 	/*
   	Flaticon icon font: Flaticon
-  	Creation date: 05/11/2019 12:16
+  	Creation date: 21/11/2019 07:26
   	*/
 
 @font-face {
@@ -30,17 +30,23 @@ font-style: normal;
 margin-left: 20px;
 }
 
-.flaticon-linkedin:before { content: "\f100"; }
-.flaticon-facebook:before { content: "\f101"; }
-.flaticon-whatsapp:before { content: "\f102"; }
-.flaticon-github:before { content: "\f103"; }
-.flaticon-twitter:before { content: "\f104"; }
-.flaticon-gmail:before { content: "\f105"; }
-.flaticon-speech-bubble:before { content: "\f106"; }
-.flaticon-google-drive-logo:before { content: "\f107"; }
-.flaticon-upload-to-cloud-button:before { content: "\f108"; }
-.flaticon-cloud-storage-download:before { content: "\f109"; }
-.flaticon-linkedin-1:before { content: "\f10a"; }
-.flaticon-whatsapp-1:before { content: "\f10b"; }
-.flaticon-menu:before { content: "\f10c"; }
-.flaticon-menu-button:before { content: "\f10d"; }
+.flaticon-curly-brackets:before { content: "\f100"; }
+.flaticon-linkedin:before { content: "\f101"; }
+.flaticon-twitter:before { content: "\f102"; }
+.flaticon-medium:before { content: "\f103"; }
+.flaticon-facebook:before { content: "\f104"; }
+.flaticon-instagram:before { content: "\f105"; }
+.flaticon-whatsapp:before { content: "\f106"; }
+.flaticon-youtube:before { content: "\f107"; }
+.flaticon-github:before { content: "\f108"; }
+.flaticon-telegram:before { content: "\f109"; }
+.flaticon-behance:before { content: "\f10a"; }
+.flaticon-share:before { content: "\f10b"; }
+.flaticon-gmail:before { content: "\f10c"; }
+.flaticon-google-browser:before { content: "\f10d"; }
+.flaticon-maps-and-flags:before { content: "\f10e"; }
+.flaticon-email:before { content: "\f10f"; }
+.flaticon-search:before { content: "\f110"; }
+.flaticon-cell-phone:before { content: "\f111"; }
+.flaticon-backup:before { content: "\f112"; }
+.flaticon-photo:before { content: "\f113"; }
